--- a/错题整理规则.md
+++ b/错题整理规则.md
@@ -1,4 +1,4 @@
-将图片中的错题整理加入到「错题库.json」中最后，并为每个题目添加以下字段：
+将图片中的错题整理加入到「questions.js」中最后，并为每个题目添加以下字段：
 question_id: 题目序号（自动增加）
 content: 题目内容（文本，包括题干）
 option_A: 选项A
