feat: 更新问题内容并添加新刑法题目
在问题内容中添加图片链接并新增一道刑法题目，完善题库内容

--- a/错题整理规则.md
+++ b/错题整理规则.md
@@ -14,7 +14,7 @@ error_number:错误次数（添加时为1，之后每错一次增加1）
 
 示例：
     "question_id": 1,
-    "content": "下列哪个元素是植物生长必需的微量元素？",
+    "content": "下列哪个元素是植物生长必需的微量元素？<img src='https://hushwu3425.github.io/picx-images-hosting/image.6pnpsdyou6.webp' width='450'>",
     "option_A": "氮",
     "option_B": "磷",
     "option_C": "锌",
