--- a/错题整理规则.md
+++ b/错题整理规则.md
@@ -1,6 +1,6 @@
 将我发给你的题目整理加入到「questions.js」末尾，并为每个题目添加以下字段：
 question_id: 题目序号（自动增加）
-content: 题目内容（文本，包括题干）
+content: 题目内容（文本，包括题干，如果题干包含图示链接，请将链接添加到content中<img src='示例.jpg' width='450'>）
 option_A: 选项A
 option_B: 选项B
 option_C: 选项C
@@ -14,7 +14,7 @@ error_number:错误次数（添加时为1，之后每错一次增加1）
 
 示例：
     "question_id": 1,
-    "content": "下列哪个元素是植物生长必需的微量元素？<img src='https://hushwu3425.github.io/picx-images-hosting/image.6pnpsdyou6.webp' width='450'>",
+    "content": "下列哪个元素是植物生长必需的微量元素？<img src='示例.jpg' width='450'>",
     "option_A": "氮",
     "option_B": "磷",
     "option_C": "锌",
